Added CMake and updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
-aclocal.m4
-Makefile.in
-configure
+CMakeCache.txt
+CMakeFiles/*
+CTestTestfile.cmake
+Testing/
+cmake_install.cmake*
+build/*
 Makefile
-.deps/*
-src/.deps*
-src/material/.deps*
-config.log
-config.status
-autom4te.cache/*
-configure.scan
 .DS_Store*
-*.dirstamp
 *.o*
 *~
 *.vtk
@@ -24,14 +19,42 @@ configure.scan
 *.h#
 *.tcc~
 *.tcc#
-readgmsh
 *.gcda*
 *.gcno*
 *coverage.info*
-*.msh*
-bin/*.msh*
 src/*#
-*.*swp*
-*.geo*
+include/*#
+external/*#
+doc/*
+*.swp*
+lcov/*
+lem-gmsh
+*stats.txt*
+aclocal.m4
+Makefile.in
+configure
+Makefile
+.deps/*
+src/.deps*
+src/material/.deps*
+tests/.deps*
+config.log
+config.status
+autom4te.cache/*
+configure.scan
+.DS_Store*
+*.dirstamp
+*autom4te.cache
+*autoscan.log
+*autoscan-*.log
+*aclocal.m4
+*compile
+*config.h.in
+*configure
+*configure.scan
+*depcomp
+*install-sh
+*missing
+*stamp-h1
+benchmarks/
 *.msh*
-*.txt*
