--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(lem LANGUAGES CXX)
+project(lem-gmsh LANGUAGES CXX)
 
 # Require C++11-compliant compiler; only available for CMake v. 3.1 and up
 set(CMAKE_CXX_STANDARD 11)
@@ -29,22 +29,25 @@ if (OPENMP_FOUND)
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
 
+# Eigen
+find_package(Eigen3 REQUIRED)
+include_directories(${EIGEN3_INCLUDE_DIR})
+
 # LEM settings
 OPTION(USE_DOUBLE_PRECISION "Use double precision" ON)
 
 # Include directories
 include_directories(
-  ${lem_SOURCE_DIR}/include
+  ${lem-gmsh_SOURCE_DIR}/include
 )
 
 # lem executable
-SET(lem_src
-    src/element.cc
-    src/mesh.cc
-    src/main.cc
+SET(lem_gmsh_src
+  src/mesh.cc
+  src/main.cc
 )
 add_executable(lem-gmsh
-               ${lem_src}
+               ${lem_gmsh_src}
 )
 
 # Coverage
