--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ env:
 ##################
 before_install:
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get install -qq libeigen3-dev
   - sudo apt-get update -qq
   
 ################
