--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,48 @@
 version: 2.0
 jobs:
   build:
-    working_directory: /home/cbgeo/research/
+    working_directory: /home/cbgeo/research/lem
     docker:
       - image: quay.io/cbgeo/lem
     steps:
       - checkout
-      # Set TBB and MKL Paths, configure CMake and run
+      # GCC 6.3
       - run:
-          name: Build LEM
-          command: mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=g++ -DCMAKE_EXPORT_COMPILE_COMMANDS=On .. && make clean && make -j8
-
+          name: GCC-7 build
+          command: |
+            mkdir -p build
+            [ "$(ls -A build)" ] && rm -rf build/*
+            cd build
+            cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=g++ -DCMAKE_EXPORT_COMPILE_COMMANDS=On ..
+            make -j8 
+            ctest -VV
+      # Clang 3.9
+      - run:
+          name: Clang-4.0 build
+          command: |
+            mkdir -p build
+            [ "$(ls -A build)" ] && rm -rf build/*
+            cd build
+            cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_EXPORT_COMPILE_COMMANDS=On ..
+            make -j8 
+            ctest -VV
+      # cppcheck
+      - run:
+          name: cppcheck
+          command: |
+            cppcheck --version
+            cppcheck --enable=warning --inconclusive --force --language=c++ --std=c++11 src/*.cc include/*.h include/*.tcc --error-exitcode=1
+      # codecoverage
+      - run:
+          name: codecov.io
+          command: |
+            mkdir -p build
+            [ "$(ls -A build)" ] && rm -rf build/*
+            cd build
+            cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=g++ -DCMAKE_EXPORT_COMPILE_COMMANDS=On -DENABLE_COVERAGE=On ..
+            make -j8
+            ctest -VV
+            make gcov
+            make lcov
+            bash <(curl -s https://codecov.io/bash) -X gcov
 
